# Fed-Vis_Mission-Capstone

./: .dockerignore  .dvcignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  dvc.yaml  err.txt  pyproject.toml  requirements.txt  start_api.bat  test_model_output.txt  test_output.txt
.dvc/: config
configs/: README.md  config.yaml
configs/federation/: default.yaml
configs/model/: attention_unet.yaml
configs/training/: default.yaml
docs/: Fed-Vis.docx  VIDEO_SCRIPT.md  data.md  diagrams.md  dvc.md
docs/mockups/: UI_SPECS.md
notebooks/: 01_data_setup.ipynb  01_demo_fedvis.ipynb  02_training.ipynb  03_colab_training.ipynb  demo_fedvis.ipynb  final_federated_training.ipynb
src/fedvis/: __init__.py  data_old.py
src/fedvis/api/: __init__.py  app.py
src/fedvis/api/static/: app.js  index.html  style.css
src/fedvis/federation/: __init__.py  client.py  server.py
src/fedvis/models/: __init__.py  attention_unet.py  blocks.py  losses.py
src/fedvis/scripts/: __init__.py  train_federated.py  train_local.py
src/fedvis/training/: __init__.py  trainer.py
tests/: conftest.py
tests/test_data/: __init__.py  test_datasets.py  test_harmonize.py  test_preprocessing.py
tests/test_models/: __init__.py  test_attention_unet.py
