[tool.poetry]
name = "fedvis"
version = "0.1.0"
description = "Privacy-Preserving 3D Medical Image Segmentation with Federated Learning"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "fedvis", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

# Core ML
torch = "^2.0.0"
torchvision = "^0.15.0"
numpy = "^1.24.0"

# Medical Imaging
nibabel = "^5.0.0"
SimpleITK = "^2.3.0"

# Configuration
hydra-core = "^1.3.0"
omegaconf = "^2.3.0"

# Federated Learning
flwr = "^1.5.0"

# Visualization & Export
scikit-image = "^0.21.0"
trimesh = "^4.0.0"

# Training Utils
tensorboard = "^2.14.0"
mlflow = "^2.8.0"
tqdm = "^4.66.0"

# Medical imaging augmentations (optional but recommended)
monai = {version = "^1.3.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
mypy = "^1.5.0"
ruff = "^0.1.0"
pre-commit = "^3.4.0"

[tool.poetry.scripts]
train-local = "fedvis.scripts.train_local:main"
train-federated = "fedvis.scripts.train_federated:main"
inference = "fedvis.scripts.inference:main"

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "D",      # pydocstyle
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
]
ignore = [
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/fedvis --cov-report=term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
